styles.css
:root {
    --sky-blue-btn: rgb(28, 176, 246);
    --sky-blue-btn-shadow: rgb(24 153 214);
    --font-family-eng: 'Fredoka', sans-serif;
    --font-family-jp: 'Kosugi Maru', sans-serif;
    --lilac-btn: rgb(206, 130, 255);
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: var(--font-family-eng);
}

button {
    cursor: pointer;
}

.hidden {
    display: none !important;
}

.is-clozed {
    border-bottom: 3px solid black;
    color: transparent;
}

.question-content {
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.question-nav-btn,
#toggle-edit-container {
    align-items: center;
    background-color: var(--sky-blue-btn);
    border: none;
    border-radius: 0.333rem;
    box-shadow: 1px 4px var(--sky-blue-btn-shadow);
    color: white;
    display: flex;
    justify-content: center;
    padding: 0.25rem;
}

.question-nav-btn:active,
#toggle-edit-container:has(input:checked) {
    transform: translateY(4px);
    box-shadow: none;
}

.question-nav-btn-icon {
    aspect-ratio: 1;
    width: 3rem;
}

.question-nav-controls {
    display: flex;
    gap: 1rem;
}

.quiz-interface {
    align-items: center;
    display: flex;
    flex-direction: column;
    height: 100vh;
    justify-content: center;
}

.sentence-eng {
    display: flex;
    flex-direction: row;
    font-size: 5rem;
    gap: 1rem;
    padding: 1rem;
}

.sentence-jp {
    font-family: var(--font-family-jp);
    font-size: 3rem;
    width: fit-content
}

.toggle-btn {
    cursor: pointer;
}

.word-eng {
    cursor: pointer;
    line-height: 0.75;
    height: 1lh;
    box-sizing: border-box;
}

#toggle-edit {
    display: none;
}

#toggle-edit-container:has(input:checked) {
    background-color: var(--lilac-btn);
}

